--- a/data type.ipynb
+++ b/data type.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Copy of Untitled121.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMLXM49lVvliqQdnCFle9BR",
+      "authorship_tag": "ABX9TyOfZ0OpUSIYZK8v0AcoRO1Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YMzqce-XBjS3",
-        "outputId": "dcfdbdb9-1cf0-4fff-a6bf-f30e4a05ac5f"
+        "outputId": "0f69707b-ead4-44f8-92d2-84142455261a"
       },
       "source": [
         "#python numbers are int,float, complex\r\n",
@@ -40,7 +40,7 @@
         "print(a)\r\n",
         "id(a)"
       ],
-      "execution_count": 3,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -59,7 +59,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 23
         }
       ]
     },
@@ -70,14 +70,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YD4Ml9JAB2z2",
-        "outputId": "88597404-e55a-40b1-da9d-ec84db8b95d9"
+        "outputId": "b2ec7fe5-bb86-4bb6-e410-98779412ae50"
       },
       "source": [
         "b=float(4)\r\n",
         "type(b)\r\n",
         "print(b)"
       ],
-      "execution_count": 4,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -95,14 +95,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9ZxRWu8qB5sc",
-        "outputId": "8da2e257-ca7f-479c-80e3-143e13a4421a"
+        "outputId": "1b689990-7476-4947-9fd5-452dfd87aa1e"
       },
       "source": [
         "c=int(4.2)\r\n",
         "type(c)\r\n",
         "print(c)"
       ],
-      "execution_count": 5,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -120,7 +120,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TBeyEVFeB8cy",
-        "outputId": "b3799f6d-2f4c-487e-dfc6-2b18fd37766b"
+        "outputId": "36165837-df72-498d-b0f8-d6454ddaf0fd"
       },
       "source": [
         "import cmath\r\n",
@@ -139,7 +139,7 @@
         "\r\n",
         "\r\n"
       ],
-      "execution_count": 6,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -161,7 +161,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AJ29CTdnB_Yh",
-        "outputId": "14934864-d29d-421e-cac7-71329189d1cf"
+        "outputId": "13a62374-836e-4d23-ef26-b7a57fce6427"
       },
       "source": [
         "z=1+1j\r\n",
@@ -169,7 +169,7 @@
         "print(w)\r\n",
         "type(w)"
       ],
-      "execution_count": 7,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -188,7 +188,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 27
         }
       ]
     },
@@ -199,13 +199,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SP_ovFwdFXNc",
-        "outputId": "3cdf7ae3-935d-4f82-809d-3334618a411f"
+        "outputId": "0e99b7cd-6693-430c-8c19-c7cef1aec1ab"
       },
       "source": [
         "w = cmath.rect(1.4142135623730951, 0.7853981633974483) \r\n",
         "type(w)"
       ],
-      "execution_count": 8,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -217,7 +217,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 28
         }
       ]
     },
@@ -228,7 +228,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KAWJtIZoFlTZ",
-        "outputId": "3705517d-9717-43bc-b593-8cee9e3a91d4"
+        "outputId": "4b36afad-6deb-4921-b107-e244720d8d83"
       },
       "source": [
         "number_of_z=0\r\n",
@@ -237,7 +237,7 @@
         "\r\n",
         "\r\n"
       ],
-      "execution_count": 9,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -267,14 +267,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E-PWmDXHJXAQ",
-        "outputId": "deac3570-ef2a-487f-bcae-8168f8ddb1db"
+        "outputId": "054ab57f-692e-46f2-eb79-3acf27986a17"
       },
       "source": [
         "str1=\"Plight of animals\"\r\n",
         "print(\"ani\" in str1)\r\n",
         "print(\"ani\" not in str1)"
       ],
-      "execution_count": 10,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -293,7 +293,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VAyvv3C_OLmG",
-        "outputId": "7085e7cb-5782-4af5-e1f9-4629bec328d0"
+        "outputId": "2a484be5-eb81-41d3-cbcb-027de590400f"
       },
       "source": [
         "str1=\"This is the first string\"\r\n",
@@ -301,7 +301,7 @@
         "str3=str1+\" and \"+str2\r\n",
         "print(str3)"
       ],
-      "execution_count": 11,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -319,14 +319,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JHrEYuYMOcOA",
-        "outputId": "3c3e160d-e1e4-47b1-cfdb-d163baab9b1e"
+        "outputId": "df14b075-5d29-47af-e298-4abd2348861f"
       },
       "source": [
         "str1=\"012345678\"\r\n",
-        "modified_str=str1[:7] #upto 7th character \r\n",
+        "modified_str=str1[:7] #upto 5th character \r\n",
         "print(modified_str)"
       ],
-      "execution_count": 12,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -344,12 +344,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zcYGrZrCO7Ge",
-        "outputId": "6f3155ab-af0c-4248-c649-bc44c06e1a80"
+        "outputId": "b0f68dfd-8f65-45b6-b52e-b3813bdce339"
       },
       "source": [
         "print(str1[1:7])"
       ],
-      "execution_count": 13,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -367,12 +367,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ni25J8ljQwpT",
-        "outputId": "0b4309d5-77d2-438f-cf49-0ace3348e13c"
+        "outputId": "83fc43bb-b405-494b-809d-8fbed25c11ea"
       },
       "source": [
         "print(str1[:-1])"
       ],
-      "execution_count": 14,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -390,12 +390,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gZWVGZpvQ-ZY",
-        "outputId": "e0b0a6d2-9d47-4a64-bd6a-4da558b780f7"
+        "outputId": "72a1c4b7-da90-473d-a681-a99acc140e6e"
       },
       "source": [
         "print(str1[0:7:2])"
       ],
-      "execution_count": 15,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -413,13 +413,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3p8J4o62RMA9",
-        "outputId": "eee81c8a-4d0a-4bfe-d96e-5b0d917d6995"
+        "outputId": "7b221ccb-329e-4e16-de7e-86b035587f09"
       },
       "source": [
         "#simple reversing the string\r\n",
         "print(str1[8:0:-1])"
       ],
-      "execution_count": 16,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -438,13 +438,13 @@
           "height": 35
         },
         "id": "lM6R1zgUXuOp",
-        "outputId": "6a597e3d-0814-4e37-f369-f2bf5a84953a"
+        "outputId": "919a760b-8539-4de3-dbb6-90c67ed31362"
       },
       "source": [
         "str1=\" This is my first python string \"\r\n",
         "str1.upper()"
       ],
-      "execution_count": 17,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -459,7 +459,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 37
         }
       ]
     },
@@ -471,12 +471,12 @@
           "height": 35
         },
         "id": "fWOjCYFRX66O",
-        "outputId": "99f0f616-9123-4acd-8ba1-682f43e18cff"
+        "outputId": "1c3704f1-2f1c-42f4-e7ec-1f5b1b24bf20"
       },
       "source": [
         "str1.upper().lower()"
       ],
-      "execution_count": 18,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -491,7 +491,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 38
         }
       ]
     },
@@ -503,12 +503,12 @@
           "height": 35
         },
         "id": "Dl_HIzfdY5pO",
-        "outputId": "ab607cae-ab55-4e90-d92e-2e31d7b3c0e1"
+        "outputId": "dcf7329a-b4e0-4780-b768-3ce6658d15a2"
       },
       "source": [
         "str1.strip() #removes white space at the begining and end of the string"
       ],
-      "execution_count": 19,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -523,7 +523,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 19
+          "execution_count": 39
         }
       ]
     },
@@ -534,12 +534,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "v7OhCILKY_LR",
-        "outputId": "a45afff3-cbf4-43fd-8c0b-97a4c723be25"
+        "outputId": "7eebae46-3bfb-4d64-9dea-c5c15daaf0f0"
       },
       "source": [
         "print(str1.replace(\"first\", \"second\"))"
       ],
-      "execution_count": 20,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
@@ -557,12 +557,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TJQ0peAvfOE5",
-        "outputId": "d660c38c-3e7a-4875-9dce-9de91a91515d"
+        "outputId": "c7627c91-969e-42d1-a333-3a05516df0e8"
       },
       "source": [
         "print(str1)"
       ],
-      "execution_count": 21,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -582,56 +582,125 @@
         "quantity=2\r\n",
         "str1=\"the number of candies available is \"+str(quantity)"
       ],
-      "execution_count": 22,
+      "execution_count": 42,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "juFgqAC1fzCN"
-      },
-      "source": [
-        "k=2"
-      ],
-      "execution_count": 1,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
+        "id": "juFgqAC1fzCN",
+        "outputId": "f14e94e3-fb66-4a5a-8ca6-5693ac3cf0b3",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "id": "fWlQXO3wf-xy",
-        "outputId": "5b2bd37c-ee04-48f8-ee9f-f6938d7d58f9"
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "str(k)"
+        "quantity = 3\r\n",
+        "itemno = 567\r\n",
+        "price = 49.95\r\n",
+        "myorder = \"I want {2} pieces of item {0} for {1} dollars.\"\r\n",
+        "print(myorder.format(quantity, itemno, price))"
       ],
-      "execution_count": 2,
+      "execution_count": 46,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'2'"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 2
+          "output_type": "stream",
+          "text": [
+            "I want 49.95 pieces of item 3 for 567 dollars.\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "j8ajcKaiktvu"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fWlQXO3wf-xy",
+        "outputId": "dd0a6648-a8bb-4522-8624-3b9a795ed453"
+      },
+      "source": [
+        "no_of_hours=3\r\n",
+        "no_of_days1=5\r\n",
+        "no_of_days2=6\r\n",
+        "str1=\"If I study for {} hours a day, then it would take me {} to {} days to finish\"\r\n",
+        "print(str1.format(no_of_hours,no_of_days1,no_of_days2))\r\n"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "If I study for 3 hours a day, then it would take me 5 to 6 to finish\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "j8ajcKaiktvu",
+        "outputId": "834e6273-039f-482e-d37b-66ba96fb2faa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "str2=\"If I study for {2} hours a day, then it would take me {0} to {1} days to finish\"\r\n",
+        "print(str2.format(no_of_hours,no_of_days1,no_of_days2))"
+      ],
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "If I study for 6 hours a day, then it would take me 3 to 5 days to finish\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ybWA-UN8pvRi"
+      },
+      "source": [
+        "txt = \"this is how you use \\\"double quotes\\\" in a string\""
+      ],
+      "execution_count": 50,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bYgDml_msI-h",
+        "outputId": "eb7b8165-f094-4da4-bc0b-edd14dc54120",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print(txt)"
+      ],
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "this is how you use \"double quotes\" in a string\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MqMujL7CsKUV"
       },
       "source": [
         ""
