--- a/trial.ipynb
+++ b/trial.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled120.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNvOBVdZzyqSonw10Wkhysi",
+      "authorship_tag": "ABX9TyO1sa1vC68ppWXA9ygJ1bMx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -318,17 +318,17 @@
       "source": [
         "a=list([12,2,2,45,6])"
       ],
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "Vl7qvuNl0MrO",
-        "outputId": "c0e9e9ba-cae3-4f7a-dae7-9beafc86b7ca",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c0e9e9ba-cae3-4f7a-dae7-9beafc86b7ca"
       },
       "source": [
         "summation=0\r\n",
@@ -337,7 +337,7 @@
         "else:\r\n",
         "  print(\"The sum of elements in a list is \"+str(summation))\r\n"
       ],
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -352,10 +352,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "_NfhidR80OVp",
-        "outputId": "8195d4d1-5aa9-4fdc-9657-0b7e46a4b009",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8195d4d1-5aa9-4fdc-9657-0b7e46a4b009"
       },
       "source": [
         "sequence=list([12,2,2,45,6,83,23,34,45])\r\n",
@@ -368,7 +368,7 @@
         "else:\r\n",
         "  print(\"The sum of elements in a list is \"+str(summation))\r\n"
       ],
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -383,10 +383,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "ZdvRlBnb06lv",
-        "outputId": "b975be05-8bef-4414-e8e2-2409fd41e764",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b975be05-8bef-4414-e8e2-2409fd41e764"
       },
       "source": [
         "#python numbers are int,float, complex\r\n",
@@ -395,7 +395,7 @@
         "print(a)\r\n",
         "id(a)"
       ],
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -422,17 +422,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "EF2r42T54BnM",
-        "outputId": "6d6a63ad-ab4d-46ff-f66b-65413cb8c96e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6d6a63ad-ab4d-46ff-f66b-65413cb8c96e"
       },
       "source": [
         "b=float(4)\r\n",
         "type(b)\r\n",
         "print(b)"
       ],
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -447,17 +447,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "InouWdOY5Rnm",
-        "outputId": "73a43629-87b4-4bcb-95bb-a8efcca01d58",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "73a43629-87b4-4bcb-95bb-a8efcca01d58"
       },
       "source": [
         "c=int(4.2)\r\n",
         "type(c)\r\n",
         "print(c)"
       ],
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -480,23 +480,23 @@
         "# converting x and y into complex number \r\n",
         "z = complex(x,y); "
       ],
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "HwSi-3Y-5pBI",
-        "outputId": "cab56044-588b-45d8-ebdf-3e43e07c4c92",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cab56044-588b-45d8-ebdf-3e43e07c4c92"
       },
       "source": [
         "type(z)\r\n",
         "z"
       ],
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -516,15 +516,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "oLU4PCqf5qT0",
-        "outputId": "ead69c32-5ae6-4d26-b8e5-a0cf07f5d70f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ead69c32-5ae6-4d26-b8e5-a0cf07f5d70f"
       },
       "source": [
         "type(z)"
       ],
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -544,16 +544,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "2B2nTGf85uE3",
-        "outputId": "b186a319-e643-43cd-b695-b92c79e03132",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b186a319-e643-43cd-b695-b92c79e03132"
       },
       "source": [
         "sentence=\"this is how you use a string\"\r\n",
         "print(sentence)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -568,15 +568,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "DI0ZJvGD6JBW",
-        "outputId": "65945c6d-67be-4e9d-8790-0054052fbba5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "65945c6d-67be-4e9d-8790-0054052fbba5"
       },
       "source": [
         "type(sentence)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -596,15 +596,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "pKJ5lUnW6Mjx",
-        "outputId": "0d6667f8-6ade-48bb-d3a7-a1225c3440fc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0d6667f8-6ade-48bb-d3a7-a1225c3440fc"
       },
       "source": [
         "len(sentence)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -633,17 +633,17 @@
         "  n=n-1\r\n",
         "print(inverted_string)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "znvb0d6E7FAO",
-        "outputId": "7e5b56b4-882c-45f5-f3eb-4bba40acf1ad",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7e5b56b4-882c-45f5-f3eb-4bba40acf1ad"
       },
       "source": [
         "sentence=\"this is how you use a string\"\r\n",
@@ -654,7 +654,7 @@
         "  n=n-1\r\n",
         "print(inverted_string)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -674,22 +674,22 @@
         "sentence='''this is how \r\n",
         "you use a string'''"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "7cIb-he0_FDY",
-        "outputId": "65af7398-5ee3-4c50-a872-6a5add5a5bb8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "65af7398-5ee3-4c50-a872-6a5add5a5bb8"
       },
       "source": [
         "len(sentence)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -713,22 +713,22 @@
       "source": [
         " c = 2 + 4j"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "HFkSMe0yBW8W",
-        "outputId": "ff2eb938-6fb9-4258-de17-575927c5b320",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ff2eb938-6fb9-4258-de17-575927c5b320"
       },
       "source": [
         "type(c)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -748,6 +748,162 @@
       "cell_type": "code",
       "metadata": {
         "id": "8pxSMFTSBYRc"
+      },
+      "source": [
+        "a=range(10)"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wamwk6KPwwoT",
+        "outputId": "6648eddb-40b3-4875-9ec4-c9e79393401e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print(a)"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "range(0, 10)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QhclT81tw638",
+        "outputId": "22d04ea5-d591-4b7f-e3ac-3bd345e20c8b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "type(a)"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "range"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DDmFjZPlw8pv",
+        "outputId": "64740aee-d796-4cb5-ffa3-c080d722d9e7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "for iter in range(0,10):\r\n",
+        "  print(iter)"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Iy2TJPFjxDnr",
+        "outputId": "7bdcef33-998b-455b-be05-9407a117573c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "for iter in range(0,10):\r\n",
+        "  if iter==4:\r\n",
+        "    continue\r\n",
+        "  print(iter)"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tXNihgOpxO42",
+        "outputId": "89ee36db-df05-4e0d-a88a-3518263e491d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "num=2\r\n",
+        "if (num==4):\r\n",
+        "  pass\r\n",
+        "else:\r\n",
+        "  print(\"The number is not 4\")\r\n"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The number is not 4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "86ka3Nly14jR"
       },
       "source": [
         ""
