--- a/elif.ipynb
+++ b/elif.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "elif.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPpFsS16iVj8fsV/z9hYhZ2",
+      "authorship_tag": "ABX9TyPu5jAOGP/k7BiWIliMQEdR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,36 @@
         "if num==0:\r\n",
         "  print(\"Number is zero\")\r\n",
         "elif num%2==0:\r\n",
-        "  print(\"Number is divisible by 2\")"
+        "  print(\"Number is even\")"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Number is zero\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ivTW7YtTK8sb",
+        "outputId": "8e182da4-1d28-495e-c0a5-526d92677131",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "num=0\r\n",
+        "if num==0:\r\n",
+        "  print(\"Number is zero\")\r\n",
+        "elif num%2==0:\r\n",
+        "  print(\"Number is even\")\r\n",
+        "else:\r\n",
+        "  print(\"Number is odd\")"
       ],
       "execution_count": 1,
       "outputs": [
@@ -54,7 +83,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ivTW7YtTK8sb"
+        "id": "wQhDa-H4TfG9"
       },
       "source": [
         ""
