--- a/while_loop.ipynb
+++ b/while_loop.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "while loop.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPpVbHya0osCGP0Jsv5rz9l",
+      "authorship_tag": "ABX9TyPSfta4h7hEMa3V8TzZGOFb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,11 +31,9 @@
       },
       "source": [
         "n=10\r\n",
-        "summation=0\r\n",
-        "while(n>=0):\r\n",
-        "  summation+=n\r\n",
-        "  n=n-1\r\n",
-        "print(summation)"
+        "iter=1\r\n",
+        "while(iter<n):\r\n",
+        "  print(n)\r\n"
       ],
       "execution_count": null,
       "outputs": []
