--- a/complex_number_declaration.ipynb
+++ b/complex_number_declaration.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "complex number declaration.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOJBWT0c3GNfIpC/KAZQRBC",
+      "authorship_tag": "ABX9TyMxIZGCIJYObgNBCX/T4yxf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,15 +35,67 @@
         "# converting x and y into complex number \r\n",
         "z1 = complex(x,y); \r\n",
         "z2 = 2 + 4j\r\n",
+        "\r\n",
         "\r\n"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HFT1fEu6PuXW"
+        "id": "HFT1fEu6PuXW",
+        "outputId": "06042e2e-c00a-4155-f733-bb13fdc65e5a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "type(z1)"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "complex"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Zd6UpJbGRjsK",
+        "outputId": "97912000-7d26-49a6-d20f-998f8031bc23",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print(z1+z2)"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(7+7j)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rT7C_5gRRqb5"
       },
       "source": [
         ""
