--- a/If_statement.ipynb
+++ b/If_statement.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "If statement.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP6Z1a9WhO0Z4HsQjeMw2Wa",
+      "authorship_tag": "ABX9TyNbx141CZixTXfRQaS41aYB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,8 +31,8 @@
       },
       "source": [
         "num=5\r\n",
-        "if num%2==0:\r\n",
-        "  print(\"number is even\")\r\n",
+        "if num>0:\r\n",
+        "  print(\"Number is greater than 0\")\r\n",
         "print(\"This line is always printed as it falls outside the if block.\")"
       ],
       "execution_count": null,
