--- a/if_else.ipynb
+++ b/if_else.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "if else.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPRRHqo7dibJBcDridTHHkq",
+      "authorship_tag": "ABX9TyOQ5CrCxemtzfcteaXZMTWv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,21 +31,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gWUn4e7BI0Z2",
-        "outputId": "02969402-e0f4-42ec-c1bd-2d1f518820b2"
+        "outputId": "fe8f1c9f-1cca-4108-c0f7-9a3612343250"
       },
       "source": [
         "num=4\r\n",
-        "if num%2==0:\r\n",
-        "  print(\"The number is either even or zero\")\r\n",
+        "if num>0:\r\n",
+        "  print(\"The number is greater than 0\")\r\n",
         "else:\r\n",
-        "  print(\"The number is odd\")"
+        "  print(\"The number is 0 or less than 0\")"
       ],
       "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "The number is either even or zero\n"
+            "The number is greater than 0\n"
           ],
           "name": "stdout"
         }
