--- a/elif.ipynb
+++ b/elif.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "elif.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPu5jAOGP/k7BiWIliMQEdR",
+      "authorship_tag": "ABX9TyNf66Hcd8W8Rqy1UmE4xelu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,16 +31,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VxV3wg4ZKxdP",
-        "outputId": "c582476b-4031-480e-c3e5-4cca8f939dae"
+        "outputId": "a5ea803a-01f3-4897-a737-a3efb50bfe4a"
       },
       "source": [
         "num=0\r\n",
         "if num==0:\r\n",
         "  print(\"Number is zero\")\r\n",
-        "elif num%2==0:\r\n",
-        "  print(\"Number is even\")"
+        "elif num>0:\r\n",
+        "  print(\"Number is greater than 0\")"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -55,21 +55,21 @@
       "cell_type": "code",
       "metadata": {
         "id": "ivTW7YtTK8sb",
-        "outputId": "8e182da4-1d28-495e-c0a5-526d92677131",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "058a91d2-2401-4b06-92f5-59ed7dbcbf60"
       },
       "source": [
         "num=0\r\n",
         "if num==0:\r\n",
         "  print(\"Number is zero\")\r\n",
-        "elif num%2==0:\r\n",
-        "  print(\"Number is even\")\r\n",
+        "elif num>0:\r\n",
+        "  print(\"Number is greater than 0\")\r\n",
         "else:\r\n",
-        "  print(\"Number is odd\")"
+        "  print(\"Number is less than 0\")"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
