--- a/Nested_if.ipynb
+++ b/Nested_if.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Nested if.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMRsphUuiwZUuPLshPpG3Vt",
+      "authorship_tag": "ABX9TyPCT+G3QS6t7WQAXyf45g6e",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,22 +31,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2O7fehqkWjsN",
-        "outputId": "178a4bfa-8dc3-46e9-e9bc-876e4b9ae7ca"
+        "outputId": "60fda629-9e3d-47f3-dea4-cf6f129d0f43"
       },
       "source": [
         "num=4\r\n",
         "if num!=0:\r\n",
-        "  if num%2==0:\r\n",
-        "    print(\"The number is even\")\r\n",
+        "  if num>0:\r\n",
+        "    print(\"The number is greater than 0\")\r\n",
         "  else:\r\n",
-        "    print(\"The number is odd\")"
+        "    print(\"The number is less than 0\")"
       ],
       "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "The number is even\n"
+            "The number is greater than 0\n"
           ],
           "name": "stdout"
         }
