--- a/Dictionary Declaration.ipynb
+++ b/Dictionary Declaration.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled127.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO0LyftJ80MXkKr8YLSB2Iq",
+      "authorship_tag": "ABX9TyNSY2gEdokWM5vK4sBKc8PP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dzjiXPzsLMXs",
-        "outputId": "fcc69dc7-da5f-4326-d6b8-b0d8cdbab0e1"
+        "outputId": "ed0a62b6-eadb-4b88-ad36-9fe4b2c1990c"
       },
       "source": [
         "Tom = {\r\n",
@@ -39,7 +39,7 @@
         "  \"Age\": 22,\r\n",
         "  \"Gender\": \"Male\",\r\n",
         "}\r\n",
-        "print(Tom)"
+        "print(Tom)\r\n"
       ],
       "execution_count": 1,
       "outputs": [
@@ -49,6 +49,18 @@
             "{'Major': 'Physics', 'Age': 22, 'Gender': 'Male'}\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 1
         }
       ]
     },
@@ -64,7 +76,7 @@
         "  \"Gender\": \"Female\",\r\n",
         "}"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -79,7 +91,7 @@
       "source": [
         "print(Sheela)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -93,7 +105,35 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mOOTJ_pDLd4A"
+        "id": "mOOTJ_pDLd4A",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c66661ad-cd89-4ed9-e6f6-d03325e88936"
+      },
+      "source": [
+        "type(Tom)"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2Idk4xubO0tY"
       },
       "source": [
         ""
