--- a/Accessing_Elements_using_values()_and_item().ipynb
+++ b/Accessing_Elements_using_values()_and_item().ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Accessing Elements using values() and item().ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOfBkqkvuaEeqDiCIrL5nZk",
+      "authorship_tag": "ABX9TyNLZAjEGL9ABJdAtIbT3JHC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,6 +28,77 @@
       "cell_type": "code",
       "metadata": {
         "id": "b9mXXU-ojxE0"
+      },
+      "source": [
+        "Sheela = {\r\n",
+        "\"Major\": \"Chemistry\",\r\n",
+        "\"Age\": 21,\r\n",
+        "\"Gender\": \"Female\",\r\n",
+        "}"
+      ],
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5XxS_BNCj_ER",
+        "outputId": "62c44778-582a-4365-d637-9f99008e9237"
+      },
+      "source": [
+        "Sheela.values()"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_values(['Chemistry', 21, 'Female'])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8YiP9c2UkNSb",
+        "outputId": "e48970cc-fc06-4e22-94b3-ed8fb650c6df"
+      },
+      "source": [
+        "Sheela.items()"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_items([('Major', 'Chemistry'), ('Age', 21), ('Gender', 'Female')])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nqGQRK1fkPpI"
       },
       "source": [
         ""
