--- a/Removing_items_using_del_method.ipynb
+++ b/Removing_items_using_del_method.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Removing items using del method.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOLrdh6gLhcy8vt0a9bReA6",
+      "authorship_tag": "ABX9TyMHkYUJ4/rTwesYTvNXFUTN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,6 +83,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "RC6m9s-n0t97"
+      },
+      "source": [
+        "del Sheela"
+      ],
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ls3z3-Ul0_vs"
       },
       "source": [
         ""
